--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
   "dependencies": {
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
+    "chalk": "^4.1.2",
     "cors": "^2.8.5",
+    "dateformat": "^4.5.1",
     "dayjs": "^1.10.6",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -39,6 +41,7 @@
     "mongoose-paginate-v2": "^1.4.1",
     "mongoose-unique-validator": "^2.0.3",
     "nodemon": "^2.0.7",
-    "validator": "^13.6.0"
+    "validator": "^13.6.0",
+    "winston": "^3.3.3"
   }
 }
